title overlap with insights fix. need better solution

--- a/src/components/insights/index.css
+++ b/src/components/insights/index.css
@@ -6,7 +6,7 @@
     position: absolute;
     width: 100%;
     height: auto;
-    top: 10%;
+    top: 11%;
     color: white;
 }
   
